--- a/templates/modalListPrice.twig
+++ b/templates/modalListPrice.twig
@@ -9,7 +9,8 @@
 			</div>
 			<div class="modal-body">
 				<div class="input-group mb-3">
-					<input type="text" id="inputTextToSearchPrice" onchange="getListPrice(this)" onkeyup="this.onchange()" class="form-control form-control-sm shadow-sm">
+					{# <input type="text" id="inputTextToSearchPrice" autocomplete="off" onchange="getListPrice(this)" onkeyup="this.onchange()" class="form-control form-control-sm shadow-sm"> #}
+					<input type="text" id="inputTextToSearchPrice" autocomplete="off" onchange="getListPrice(this)" class="form-control form-control-sm shadow-sm">
 				</div>
 				<div style="min-height: 300px;">
 					<table class="table table-sm">
