--- a/templates/slider.twig
+++ b/templates/slider.twig
@@ -137,6 +137,13 @@
             <a href="{{path_for('Accounting')}}" class="nav-link text-dark font-italic bg-light">Contabilidad</a>
         </li>
         {% endif %}
+
+        <li class="nav-item">
+            <a href="{{path_for('Caes')}}" class="nav-link text-dark font-italic bg-light">
+                <i class="fas fa-file-alt text-template-background mr-2"></i> Constancias de emisión
+            </a>
+        </li>
+        
         <li class="nav-item">
             <a href="{{path_for('Settings')}}" class="nav-link text-dark font-italic bg-light">
                 <i class="fas fa-cog text-template-background mr-2"></i> Configuraciones
