--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -329,6 +329,15 @@
 							</div>
 							<p class="ml-2">Saltarse selección de cliente (Punto de venta).</p>
 						</div>
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<label class="switch">
+									<input id="SUPERFAST_SALE" type="checkbox" onchange="updateConfigurationBoolean(this)">
+									<span class="slider round"></span>
+								</label>
+							</div>
+							<p class="ml-2">Venta super rápida.</p>
+						</div>
 						<hr>
 						<div id="">
 							<div class="row form-group mb-2">
