--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,6 +1,7 @@
 <footer id="sticky-footer" class="text-white background-template-color">
-	<div class="d-flex justify-content-center" >
-		{# <div></div> #}
+	{# <div class="d-flex justify-content-center" > #}
+	<div class="d-flex justify-content-between" >
+		<div></div>
 		<span class="m-3">
 			<small class="text-white m-0"><a class="text-white" href="https://byg.uy">www.byg.uy</a> &copy; 2025</small>
 		</span>
@@ -12,7 +13,8 @@
 		{% endif %}
 
 		{% if systemSession %}
-		<div class="row m-2 align-items-center" style="position: absolute; right: 0; bottom: 0;">
+		{# <div class="row m-2 align-items-center" style="position: absolute; right: 0; bottom: 0;"> #}
+		<div class="row m-2 align-items-center" style="">
 			<p id="textUpdate" class="h6 text-white m-0 mr-2" style="visibility: hidden;">Actualizando datos...</p>
 			<button class="btn btn-sm background-template-color2 text-template-background m-1" onclick="updateVouchers('FOOTER');" data-toggle="tooltip" data-placement="top" title="Actualizar comprobantes almacenados"><i id="btnUpdateFooter" class="fas fa-sync-alt"></i></button>
 		</div>
