--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -253,6 +253,17 @@
 						<div class="d-flex flex-row-reverse">
 							<button class="btn btn-success btn-sm shadow-sm" onclick="updateBillingIndicators()" title="Guardar"><i class="fas fa-save"></i> Guardar</button>
 						</div>
+						<hr>
+						<div id="">
+							<div class="row form-group mb-2">
+								<label class="col-5 m-auto" for="">Facturación por defecto</label>
+								<select type="text" class="form-control form-control-sm text-center col mr-3 shadow-sm" id="INDICADORES_FACTURACION_DEFECTO" onchange="changeIndFactDefault(this.value)">
+									{% for iva in listIvas %}
+										<option value="{{ iva.id }}">{{ iva.nombre }}</option>
+									{% endfor %}
+								</select>
+							</div>
+						</div>
 					</div>
 					<!-- FACTURACION -->
 					<div class="tab-pane fade border-template shadow p-2" id="billingContainer" role="tabpanel" aria-labelledby="v-pills-settings-tab">
@@ -424,6 +435,9 @@
 							<button class="btn btn-link btn-sm" onclick="loadCustomers();" title="Se crean los clientes que se hayan encontrado en Sigecom y no en EFactura."><i id="iconBtnLoadCustomersEfactura" class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
 							<p class="pt-2 pl-2">Cargar clientes en EFactura.</p>
 						</div>
+						<div class="d-flex flex-row">
+							<button class="btn btn-danger shadow-sm ml-2 mt-2 w-100" onclick="eliminarEmpresa();" title="Eliminar empresa permanentemente."><i class="fas fa-trash-alt"></i> Eliminar Empresa</button>
+						</div>
 						<hr>
 						<p class="text-left text-template-background font-italic h6 mt-1">Respaldos</p>
 						<div class="row d-flex justify-content-center m-1">
@@ -522,6 +536,9 @@
 {%block script%}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/backup.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/configuration.js{{ versionerp }}"></script>
+{% if systemSession.superUser == 'SI' %}
+	<script type="text/javascript" src="{{ path_for('Start')}}scripts/superuser.js{{ versionerp }}"></script>
+{% endif %}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/utils.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/sendPost.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
