--- a/templates/clients.twig
+++ b/templates/clients.twig
@@ -11,8 +11,8 @@
 			</div>
 		</div>
 		<div class="card-body">
-			<div class="row mb-2 ml-1">
-				<div class="input-group m-1" style="min-width: 100px; max-width: 250px;">
+			<div class="row mb-2 ml-0">
+				<div class="input-group ml-0" style="min-width: 100px; max-width: 250px;">
 					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchClient(this)" onkeyup="this.onchange()" placeholder="Buscar cliente...">
 				</div>
 				<div class="form-check m-1 pl-0" style="min-width: 100px; max-width: 200px; display: flex; align-items: center;">
