--- a/templates/base.twig
+++ b/templates/base.twig
@@ -94,7 +94,7 @@
 				</div>
 				<div class="modal-body">
 					<div class="alert alert-danger mb-0" role="alert">
-						Advertencia: Esto es una acción desctructiva
+						Advertencia: Esto es una acción destructiva
 					</div>
 					<hr>
 					<ul>
