--- a/templates/vouchersClients.twig
+++ b/templates/vouchersClients.twig
@@ -16,19 +16,19 @@
 		</div>
 		<div class="card-body">
 			<div class="form-row mb-3">
-				<div class="col m-1">
-					<div class="input-group" style="min-width: 100px; max-width: 200px;">
+				<div class="col mr-1 ml-0 mb-1">
+					<div class="input-group" style="min-width: 100px;">
 						<input id="inputToSearchClient" type="text" class="form-control form-control-sm shadow-sm" onchange="searchVoucherClient(this)" onkeyup="this.onchange()" placeholder="Buscar cliente..." title="Documento o nombre del cliente.">
 					</div>
 				</div>
-				<div class="col m-1">
-					<div class="input-group" style="min-width: 100px; max-width: 200px;">
+				<div class="col mr-1 ml-0 mb-1">
+					<div class="input-group" style="min-width: 100px;">
 						<input id="inputToSearch" type="number" class="form-control form-control-sm shadow-sm" onchange="searchVoucherNumber(this)" onkeyup="this.onchange()" placeholder="Buscar comprobante..." title="Ingresar número de comprobante.">
 					</div>
 				</div>
 				{% if resultDatesVoucher.result == 2 %}
-				<div class="col m-1">
-					<div class="input-group shadow-sm" style="min-width: 170px; max-width: 250px;">
+				<div class="col mr-1 ml-0 mb-1">
+					<div class="input-group shadow-sm" style="min-width: 170px;">
 						<input id="inputDateFilter" type="date" class="form-control form-control-sm" value="{{resultDatesVoucher.objectResult.maxDate}}"> <!--min="{{ resultDatesVoucher.objectResult.minDate }}" max="{{ resultDatesVoucher.objectResult.maxDate }}"-->
 						<div class="input-group-append">
 							<button id="btnSearchVoucher" class="btn background-template-color2 btn-sm shadow-sm" onclick="findWithDate()"><i id="iconSearch" class="fas fa-search"></i></button>
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				{% endif %}
-				<div class="col m-1" style="min-width: 170px; max-width: 250px;">
+				<div class="col mr-1 ml-0 mb-1" style="min-width: 170px;">
 					<select class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm" onchange="changePaymentMethod(this)">
 						<option value="0" selected>Formas de pago</option>
 						<option value="1">Contado</option>
@@ -44,7 +44,7 @@
 					</select>
 				</div>
 				{% if resultTypeVouchers.result == 2 %}
-				<div class="col m-1" style="min-width: 170px; max-width: 250px;">
+				<div class="col mr-1 ml-0 mb-1" style="min-width: 170px;">
 					<select id="selectTypeVoucher" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm" onchange="changeTypeVoucher(this)">
 						<option value="0" selected>Todos los comprobantes</option>
 						{% for typeCFE in resultTypeVouchers.listResult %}
@@ -61,7 +61,7 @@
 					</select>
 				</div>
 				{% endif %}
-				<div class="col m-1" style="min-width: 170px; max-width: 250px;">
+				<div class="col mr-0 ml-0 mb-1" style="min-width: 170px;">
 					<select class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm" onchange="changeBranchCompany(this)">
 						<option value="0" selected>Sucursales</option>
 						{% for index in branchCompany.listResult %}
